// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A with all props passed renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <A
    href="https://codeplaylove.de"
    target="_blank"
    title="CodePlayLove"
  >
    My portfolio
  </A>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "My portfolio",
      "href": "https://codeplaylove.de",
      "rel": "noopener noreferrer",
      "target": "_blank",
      "title": "CodePlayLove",
    },
    "ref": null,
    "rendered": "My portfolio",
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "My portfolio",
        "href": "https://codeplaylove.de",
        "rel": "noopener noreferrer",
        "target": "_blank",
        "title": "CodePlayLove",
      },
      "ref": null,
      "rendered": "My portfolio",
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`A with required props passed renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <A
    href="https://codeplaylove.de"
    target="_SELF"
    title={null}
  >
    My portfolio
  </A>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "My portfolio",
      "href": "https://codeplaylove.de",
      "rel": null,
      "target": "_SELF",
      "title": "My portfolio",
    },
    "ref": null,
    "rendered": "My portfolio",
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "My portfolio",
        "href": "https://codeplaylove.de",
        "rel": null,
        "target": "_SELF",
        "title": "My portfolio",
      },
      "ref": null,
      "rendered": "My portfolio",
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
